# ShaderRunner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  apollonian.glsl  build_VisualStudio-release-clean.cmd  devel_VisualStudio.cmd  generate_VisualStudio.cmd  generate_linux
cmake/: installQtLibs.cmake  installQtPlugins.cmake  setLibraries.cmake  setVariables.cmake
src/: CMakeLists.txt
src/GLViewWidget/: CMakeLists.txt  GLViewWidget.cpp  GLViewWidget.h  GLViewWidget_global.h
src/ShaderRunner/: CMakeLists.txt  ProgressDialog.cpp  ProgressDialog.h  ProgressDialog.ui  RenderToFileDialog.cpp  RenderToFileDialog.h  RenderToFileDialog.ui  ShaderRunner.qrc  ShaderRunner.rc  main.cpp  settings.cpp  settings.h  srMainWindow.cpp  srMainWindow.h  srMainWindow.ui
src/ShaderRunner/resources/: ShaderRunner_icon.gfie
