cmake_minimum_required (VERSION 3.5)
project (ShaderRunner)

set (PROJECT_NAME "ShaderRunner")
set (PROJECT_VERSION_MAJOR 1)
set (PROJECT_VERSION_MINOR 0)
set (PROJECT_COPYRIGHT "Piotr Borys")

set (CMAKE_PREFIX_PATH $ENV{FIND_LIBS_PATH})
set (CMAKE_INCLUDE_CURRENT_DIR ON)
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set (CMAKE_AUTOMOC ON)
set (CMAKE_AUTOUIC ON)
set (CMAKE_AUTORCC ON)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:wchar_t")
add_definitions(-DUNICODE;-D_UNICODE)
add_definitions(-DQT_NO_CAST_FROM_ASCII)
add_definitions(-DQT_NO_CAST_TO_ASCII)
add_definitions(-DQT_NO_CAST_FROM_BYTEARRAY)
add_definitions(-DQT_NO_URL_CAST_FROM_STRING)
add_definitions(-DQT_USE_QSTRINGBUILDER)

if(USE_FFMPEG)
add_definitions(-DUSE_FFMPEG)
endif()

set (CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS_RELEASE} /Zi")
set (CMAKE_EXE_LINKER_FLAGS_RELEASE  "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /DEBUG")
set (CMAKE_SHARED_LINKER_FLAGS_RELEASE  "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG")
set (CMAKE_MODULE_LINKER_FLAGS_RELEASE  "${CMAKE_MODULE_LINKER_FLAGS_RELEASE} /DEBUG")

set (UI_FILES_FILTER ".*([.]ui)")
set (RESOURCE_FILES_FILTER ".*([.]qrc|[.]qss)")

include(cmake/setVariables.cmake)
include(cmake/setLibraries.cmake)

set(VS_GLOBAL_QtVersion ${Qt5Core_VERSION})
set_property (GLOBAL PROPERTY USE_FOLDERS ON)
set_property (GLOBAL PROPERTY AUTOGEN_TARGETS_FOLDER autoGenerated)

set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME ShaderRunner)

add_subdirectory (src)
